refactor: code cleanup (log parameterization, remove unused methods, updated deprecated/hardcoded methods, etc)