@@ -25,7 +25,6 @@ import org.springframework.web.bind.annotation.*;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Profile("beyond")
 @RestController
@@ -170,9 +169,9 @@ public class InteroperabilityRecordController {
 
     @Operation(summary = "Validates the Interoperability Record without actually changing the repository.")
     @PostMapping(path = "validate", produces = {MediaType.APPLICATION_JSON_VALUE})
-    public ResponseEntity<Boolean> validate(@RequestBody InteroperabilityRecord interoperabilityRecord) {
-        ResponseEntity<Boolean> ret = ResponseEntity.ok(interoperabilityRecordService.validateInteroperabilityRecord(new InteroperabilityRecordBundle(interoperabilityRecord)));
-        return ret;
+    public ResponseEntity<Void> validate(@RequestBody InteroperabilityRecord interoperabilityRecord) {
+        interoperabilityRecordService.validate(new InteroperabilityRecordBundle(interoperabilityRecord));
+        return new ResponseEntity<>(HttpStatus.OK);
     }
 
     @Browse
@@ -242,14 +241,14 @@ public class InteroperabilityRecordController {
                 .getAll(createFacetFilter(catalogueId, false), securityService.getAdminAccess()).getResults()
                 .stream().map(InteroperabilityRecordBundle::getInteroperabilityRecord)
                 .map(c -> new Value(c.getId(), c.getTitle()))
-                .collect(Collectors.toList());
+                .toList();
         // fetch non-catalogueId related public Interoperability Records
         List<Value> publicInteroperabilityRecords = interoperabilityRecordService
                 .getAll(createFacetFilter(catalogueId, true), securityService.getAdminAccess()).getResults()
                 .stream().map(InteroperabilityRecordBundle::getInteroperabilityRecord)
                 .filter(c -> !c.getCatalogueId().equals(catalogueId))
                 .map(c -> new Value(c.getId(), c.getTitle()))
-                .collect(Collectors.toList());
+                .toList();
 
         allInteroperabilityRecords.addAll(catalogueRelatedInteroperabilityRecords);
         allInteroperabilityRecords.addAll(publicInteroperabilityRecords);
@@ -275,7 +274,7 @@ public class InteroperabilityRecordController {
     @PreAuthorize("hasRole('ROLE_ADMIN')")
     public ResponseEntity<InteroperabilityRecordBundle> add(@RequestBody InteroperabilityRecordBundle interoperabilityRecordBundle, Authentication authentication) {
         ResponseEntity<InteroperabilityRecordBundle> ret = new ResponseEntity<>(interoperabilityRecordService.add(interoperabilityRecordBundle, authentication), HttpStatus.OK);
-        logger.info("Added InteroperabilityRecordBundle '{}' with id: {}", interoperabilityRecordBundle.getInteroperabilityRecord().getTitle(), interoperabilityRecordBundle.getId());
+        logger.info("Added InteroperabilityRecordBundle {} with id: '{}'", interoperabilityRecordBundle.getInteroperabilityRecord().getTitle(), interoperabilityRecordBundle.getId());
         return ret;
     }
 
@@ -283,7 +282,7 @@ public class InteroperabilityRecordController {
     @PreAuthorize("hasRole('ROLE_ADMIN')")
     public ResponseEntity<InteroperabilityRecordBundle> update(@RequestBody InteroperabilityRecordBundle interoperabilityRecord, @Parameter(hidden = true) Authentication authentication) {
         InteroperabilityRecordBundle interoperabilityRecordBundle = interoperabilityRecordService.update(interoperabilityRecord, authentication);
-        logger.info("Updated InteroperabilityRecordBundle '{}' with id: {}", interoperabilityRecordBundle.getInteroperabilityRecord().getTitle(), interoperabilityRecordBundle.getId());
+        logger.info("Updated InteroperabilityRecordBundle {} with id: '{}'", interoperabilityRecordBundle.getInteroperabilityRecord().getTitle(), interoperabilityRecordBundle.getId());
         return new ResponseEntity<>(interoperabilityRecordBundle, HttpStatus.OK);
     }
 
@@ -336,8 +335,7 @@ public class InteroperabilityRecordController {
     @PutMapping(path = "/draft", produces = {MediaType.APPLICATION_JSON_VALUE})
     @PreAuthorize("hasRole('ROLE_ADMIN') or hasRole('ROLE_EPOT') or @securityService.isResourceProviderAdmin(#auth, #interoperabilityRecord.id)")
     public ResponseEntity<InteroperabilityRecord> updateDraftInteroperabilityRecord(@RequestBody InteroperabilityRecord interoperabilityRecord,
-                                                                                    @Parameter(hidden = true) Authentication auth)
-            {
+                                                                                    @Parameter(hidden = true) Authentication auth) {
         InteroperabilityRecordBundle interoperabilityRecordBundle = draftInteroperabilityRecordService.get(interoperabilityRecord.getId());
         interoperabilityRecordBundle.setInteroperabilityRecord(interoperabilityRecord);
         interoperabilityRecordBundle = draftInteroperabilityRecordService.update(interoperabilityRecordBundle, auth);
@@ -350,8 +348,7 @@ public class InteroperabilityRecordController {
     @PreAuthorize("hasRole('ROLE_ADMIN') or hasRole('ROLE_EPOT') or @securityService.isResourceProviderAdmin(#auth, #prefix+'/'+#suffix)")
     public ResponseEntity<InteroperabilityRecord> deleteDraftInteroperabilityRecord(@Parameter(description = "The left part of the ID before the '/'") @PathVariable("prefix") String prefix,
                                                                                     @Parameter(description = "The right part of the ID after the '/'") @PathVariable("suffix") String suffix,
-                                                                                    @Parameter(hidden = true) Authentication auth)
-            {
+                                                                                    @Parameter(hidden = true) Authentication auth) {
         String id = prefix + "/" + suffix;
         InteroperabilityRecordBundle interoperabilityRecordBundle = draftInteroperabilityRecordService.get(id);
         if (interoperabilityRecordBundle == null) {
@@ -366,8 +363,7 @@ public class InteroperabilityRecordController {
     @PutMapping(path = "draft/transform", produces = {MediaType.APPLICATION_JSON_VALUE})
     @PreAuthorize("hasRole('ROLE_USER')")
     public ResponseEntity<InteroperabilityRecord> transformToInteroperabilityRecord(@RequestBody InteroperabilityRecord interoperabilityRecord,
-                                                                                    @Parameter(hidden = true) Authentication auth)
-            {
+                                                                                    @Parameter(hidden = true) Authentication auth) {
         InteroperabilityRecordBundle interoperabilityRecordBundle = draftInteroperabilityRecordService.get(interoperabilityRecord.getId());
         interoperabilityRecordBundle.setInteroperabilityRecord(interoperabilityRecord);
 
