@@ -39,7 +39,7 @@ public class CatalogueManager extends ResourceManager<CatalogueBundle> implement
     private final FieldValidator fieldValidator;
     private final RegistrationMailService registrationMailService;
     private final ProviderService providerService;
-    private final ServiceBundleService serviceBundleService;
+    private final ServiceBundleService<ServiceBundle> serviceBundleService;
     private final TrainingResourceService trainingResourceService;
     private final InteroperabilityRecordService interoperabilityRecordService;
     private final ProviderResourcesCommonMethods commonMethods;
@@ -49,7 +49,7 @@ public class CatalogueManager extends ResourceManager<CatalogueBundle> implement
 
     public CatalogueManager(IdCreator idCreator,
                             @Lazy ProviderService providerService,
-                            @Lazy ServiceBundleService serviceBundleService,
+                            @Lazy ServiceBundleService<ServiceBundle> serviceBundleService,
                             @Lazy TrainingResourceService trainingResourceService,
                             @Lazy InteroperabilityRecordService interoperabilityRecordService,
                             @Lazy FieldValidator fieldValidator,
@@ -160,7 +160,7 @@ public class CatalogueManager extends ResourceManager<CatalogueBundle> implement
         catalogue.setAuditState(Auditable.NOT_AUDITED);
 
         // latestOnboardingInfo
-        catalogue.setLatestOnboardingInfo(loggingInfoList.get(0));
+        catalogue.setLatestOnboardingInfo(loggingInfoList.getFirst());
 
         CatalogueBundle ret;
         ret = super.add(catalogue, null);
@@ -172,7 +172,7 @@ public class CatalogueManager extends ResourceManager<CatalogueBundle> implement
     }
 
     public CatalogueBundle update(CatalogueBundle catalogueBundle, String comment, Authentication auth) {
-        logger.trace("Attempting to update the Catalogue with id '{}'", catalogueBundle);
+        logger.trace("Attempting to update the Catalogue with id '{}'", catalogueBundle.getId());
 
         CatalogueBundle ret = ObjectUtils.clone(catalogueBundle);
         Resource existingResource = whereID(ret.getId(), true);
@@ -206,8 +206,8 @@ public class CatalogueManager extends ResourceManager<CatalogueBundle> implement
         adminDifferences(ret, existingCatalogue);
 
         if (ret.getLatestAuditInfo() != null && ret.getLatestUpdateInfo() != null) {
-            Long latestAudit = Long.parseLong(ret.getLatestAuditInfo().getDate());
-            Long latestUpdate = Long.parseLong(ret.getLatestUpdateInfo().getDate());
+            long latestAudit = Long.parseLong(ret.getLatestAuditInfo().getDate());
+            long latestUpdate = Long.parseLong(ret.getLatestUpdateInfo().getDate());
             if (latestAudit < latestUpdate && ret.getLatestAuditInfo().getActionType().equals(LoggingInfo.ActionType.INVALID.getKey())) {
                 registrationMailService.notifyPortalAdminsForInvalidCatalogueUpdate(ret);
             }
@@ -218,19 +218,12 @@ public class CatalogueManager extends ResourceManager<CatalogueBundle> implement
 
     @Override
     public CatalogueBundle validate(CatalogueBundle catalogue) {
-        logger.debug("Validating Catalogue with id: {}", catalogue.getId());
-
+        logger.debug("Validating Catalogue with id: '{}'", catalogue.getId());
         if (catalogue.getCatalogue().getScientificDomains() != null && !catalogue.getCatalogue().getScientificDomains().isEmpty()) {
             validateScientificDomains(catalogue.getCatalogue().getScientificDomains());
         }
 
-        try {
-            fieldValidator.validate(catalogue);
-        } catch (IllegalAccessException e) {
-            logger.error("", e);
-        }
-
-        return catalogue;
+        return super.validate(catalogue);
     }
 
     @Override
@@ -343,7 +336,7 @@ public class CatalogueManager extends ResourceManager<CatalogueBundle> implement
         if (!statusVocabulary.getType().equals("Catalogue state")) {
             throw new ValidationException(String.format("Vocabulary %s does not consist a Catalogue State!", status));
         }
-        logger.trace("verifyCatalogue with id: '{}' | status -> '{}' | active -> '{}'", id, status, active);
+        logger.trace("verifyCatalogue with id: '{}' | status: '{}' | active: '{}'", id, status, active);
         CatalogueBundle catalogue = get(id);
         catalogue.setStatus(vocabularyService.get(status).getId());
         List<LoggingInfo> loggingInfoList = commonMethods.returnLoggingInfoListAndCreateRegistrationInfoIfEmpty(catalogue, auth);
