@@ -32,7 +32,6 @@ public class InteroperabilityRecordManager extends ResourceManager<Interoperabil
     private final SecurityService securityService;
     private final VocabularyService vocabularyService;
     private final PublicInteroperabilityRecordManager publicInteroperabilityRecordManager;
-    private final CatalogueService catalogueService;
     private final RegistrationMailService registrationMailService;
     private final ProviderResourcesCommonMethods commonMethods;
 
@@ -42,7 +41,6 @@ public class InteroperabilityRecordManager extends ResourceManager<Interoperabil
     public InteroperabilityRecordManager(ProviderService providerService, IdCreator idCreator,
                                          SecurityService securityService, VocabularyService vocabularyService,
                                          PublicInteroperabilityRecordManager publicInteroperabilityRecordManager,
-                                         CatalogueService catalogueService,
                                          RegistrationMailService registrationMailService,
                                          ProviderResourcesCommonMethods commonMethods) {
         super(InteroperabilityRecordBundle.class);
@@ -51,7 +49,6 @@ public class InteroperabilityRecordManager extends ResourceManager<Interoperabil
         this.securityService = securityService;
         this.vocabularyService = vocabularyService;
         this.publicInteroperabilityRecordManager = publicInteroperabilityRecordManager;
-        this.catalogueService = catalogueService;
         this.registrationMailService = registrationMailService;
         this.commonMethods = commonMethods;
     }
@@ -68,7 +65,7 @@ public class InteroperabilityRecordManager extends ResourceManager<Interoperabil
 
     @Override
     public InteroperabilityRecordBundle add(InteroperabilityRecordBundle interoperabilityRecordBundle, String catalogueId, Authentication auth) {
-        if (catalogueId == null || catalogueId.equals("")) { // add catalogue provider
+        if (catalogueId == null || catalogueId.isEmpty()) { // add catalogue provider
             interoperabilityRecordBundle.getInteroperabilityRecord().setCatalogueId(this.catalogueId);
         } else { // external catalogue
             commonMethods.checkCatalogueIdConsistency(interoperabilityRecordBundle, catalogueId);
@@ -99,7 +96,7 @@ public class InteroperabilityRecordManager extends ResourceManager<Interoperabil
         // loggingInfo
         List<LoggingInfo> loggingInfoList = commonMethods.returnLoggingInfoListAndCreateRegistrationInfoIfEmpty(interoperabilityRecordBundle, auth);
         interoperabilityRecordBundle.setLoggingInfo(loggingInfoList);
-        interoperabilityRecordBundle.setLatestOnboardingInfo(loggingInfoList.get(0));
+        interoperabilityRecordBundle.setLatestOnboardingInfo(loggingInfoList.getFirst());
         interoperabilityRecordBundle.setAuditState(Auditable.NOT_AUDITED);
 
         interoperabilityRecordBundle.getInteroperabilityRecord().setCreated(String.valueOf(System.currentTimeMillis()));
@@ -133,7 +130,7 @@ public class InteroperabilityRecordManager extends ResourceManager<Interoperabil
                     ret.getInteroperabilityRecord().getId(), ret.getInteroperabilityRecord().getCatalogueId()));
         }
 
-        if (catalogueId == null || catalogueId.equals("")) {
+        if (catalogueId == null || catalogueId.isEmpty()) {
             ret.getInteroperabilityRecord().setCatalogueId(this.catalogueId);
         } else {
             commonMethods.checkCatalogueIdConsistency(ret, catalogueId);
@@ -220,7 +217,7 @@ public class InteroperabilityRecordManager extends ResourceManager<Interoperabil
         if (!statusVocabulary.getType().equals("Interoperability Record state")) {
             throw new ValidationException(String.format("Vocabulary %s does not consist an Interoperability Record state!", status));
         }
-        logger.trace("verifyResource with id: '{}' | status -> '{}' | active -> '{}'", id, status, active);
+        logger.trace("verifyResource with id: '{}' | status: '{}' | active: '{}'", id, status, active);
         InteroperabilityRecordBundle interoperabilityRecordBundle = get(id);
         interoperabilityRecordBundle.setStatus(vocabularyService.get(status).getId());
 
@@ -228,8 +225,6 @@ public class InteroperabilityRecordManager extends ResourceManager<Interoperabil
         LoggingInfo loggingInfo;
 
         switch (status) {
-            case "pending interoperability record":
-                break;
             case "approved interoperability record":
                 interoperabilityRecordBundle.setActive(active);
                 loggingInfo = commonMethods.createLoggingInfo(auth, LoggingInfo.Types.ONBOARD.getKey(),
@@ -252,6 +247,7 @@ public class InteroperabilityRecordManager extends ResourceManager<Interoperabil
                 // latestOnboardingInfo
                 interoperabilityRecordBundle.setLatestOnboardingInfo(loggingInfo);
                 break;
+            case "pending interoperability record":
             default:
                 break;
         }
@@ -270,7 +266,7 @@ public class InteroperabilityRecordManager extends ResourceManager<Interoperabil
         if (providerBundle.getStatus().equals("approved provider") && providerBundle.isActive()) {
             activeProvider = interoperabilityRecordBundle.getInteroperabilityRecord().getProviderId();
         }
-        if (active && activeProvider.equals("")) {
+        if (active && activeProvider.isEmpty()) {
             throw new ResourceException("Interoperability Record does not have active Providers", HttpStatus.CONFLICT);
         }
         interoperabilityRecordBundle.setActive(active);
@@ -289,9 +285,11 @@ public class InteroperabilityRecordManager extends ResourceManager<Interoperabil
         return interoperabilityRecordBundle;
     }
 
-    public boolean validateInteroperabilityRecord(InteroperabilityRecordBundle interoperabilityRecordBundle) {
-        validate(interoperabilityRecordBundle);
-        return true;
+    @Override
+    public InteroperabilityRecordBundle validate(InteroperabilityRecordBundle interoperabilityRecordBundle) {
+        logger.debug("Validating InteroperabilityRecord with id: '{}'", interoperabilityRecordBundle.getId());
+        super.validate(interoperabilityRecordBundle);
+        return interoperabilityRecordBundle;
     }
 
     @Override
@@ -320,7 +318,7 @@ public class InteroperabilityRecordManager extends ResourceManager<Interoperabil
             loggingInfoList.sort(Comparator.comparing(LoggingInfo::getDate).reversed());
             return new Browsing<>(loggingInfoList.size(), 0, loggingInfoList.size(), loggingInfoList, null);
         } catch (ResourceNotFoundException e) {
-            logger.info(String.format("Interoperability Record with id [%s] not found", id));
+            logger.info("Interoperability Record with id '{}' not found", id);
         }
         return null;
     }
