@@ -25,7 +25,6 @@ import org.springframework.security.authentication.InsufficientAuthenticationExc
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
 
-import java.net.URL;
 import java.time.Instant;
 import java.time.ZoneId;
 import java.util.*;
@@ -109,7 +108,7 @@ public class ProviderManager extends ResourceManager<ProviderBundle> implements 
 
     @Override
     public ProviderBundle add(ProviderBundle provider, String catalogueId, Authentication auth) {
-        logger.trace("Attempting to add a new Provider: {} on Catalogue: {}", provider, catalogueId);
+        logger.trace("Attempting to add a new Provider: {} on Catalogue: '{}'", provider, catalogueId);
 
         provider = onboard(provider, catalogueId, auth);
 
@@ -127,7 +126,7 @@ public class ProviderManager extends ResourceManager<ProviderBundle> implements 
 
         ProviderBundle ret;
         ret = super.add(provider, null);
-        logger.debug("Adding Provider: {} of Catalogue: {}", provider, catalogueId);
+        logger.debug("Adding Provider: {} of Catalogue: '{}'", provider, catalogueId);
 
         registrationMailService.sendEmailsToNewlyAddedProviderAdmins(provider, null);
 
@@ -155,7 +154,7 @@ public class ProviderManager extends ResourceManager<ProviderBundle> implements 
             }
         }
 
-        if (catalogueId == null || catalogueId.equals("")) {
+        if (catalogueId == null || catalogueId.isEmpty()) {
             ret.getProvider().setCatalogueId(this.catalogueId);
         } else {
             commonMethods.checkCatalogueIdConsistency(ret, catalogueId);
@@ -377,7 +376,7 @@ public class ProviderManager extends ResourceManager<ProviderBundle> implements 
                     try {
                         serviceBundleService.delete(s);
                     } catch (ResourceNotFoundException e) {
-                        logger.error(String.format("Error deleting Service with ID [%s]", s.getId()));
+                        logger.error("Error deleting Service with ID '{}'", s.getId());
                     }
                 }
             });
@@ -390,7 +389,7 @@ public class ProviderManager extends ResourceManager<ProviderBundle> implements 
                     try {
                         trainingResourceService.delete(s);
                     } catch (ResourceNotFoundException e) {
-                        logger.error(String.format("Error deleting Training Resource with ID [%s]", s.getId()));
+                        logger.error("Error deleting Training Resource with ID '{}'", s.getId());
                     }
                 }
             });
@@ -403,7 +402,7 @@ public class ProviderManager extends ResourceManager<ProviderBundle> implements 
                     try {
                         interoperabilityRecordService.delete(s);
                     } catch (ResourceNotFoundException e) {
-                        logger.error(String.format("Error deleting Interoperability Record with ID [%s]", s.getId()));
+                        logger.error("Error deleting Interoperability Record with ID '{}'", s.getId());
                     }
                 }
             });
@@ -440,7 +439,7 @@ public class ProviderManager extends ResourceManager<ProviderBundle> implements 
         if (!statusVocabulary.getType().equals("Provider state")) {
             throw new ValidationException(String.format("Vocabulary %s does not consist a Provider State!", status));
         }
-        logger.trace("verifyProvider with id: '{}' | status -> '{}' | active -> '{}'", id, status, active);
+        logger.trace("verifyProvider with id: '{}' | status: '{}' | active: '{}'", id, status, active);
         ProviderBundle provider = get(id, auth);
         Resource existingResource = getResource(provider.getId(), provider.getProvider().getCatalogueId());
         ProviderBundle existingProvider = deserialize(existingResource);
@@ -590,9 +589,9 @@ public class ProviderManager extends ResourceManager<ProviderBundle> implements 
         List<TrainingResourceBundle> trainingResources = trainingResourceService.getResourceBundles(providerId, auth);
         List<InteroperabilityRecordBundle> interoperabilityRecords = interoperabilityRecordService.getInteroperabilityRecordBundles(catalogueId, providerId, auth).getResults();
         if (active) {
-            logger.info("Activating all Resources of the Provider with id: {}", providerId);
+            logger.info("Activating all Resources of the Provider with id: '{}'", providerId);
         } else {
-            logger.info("Deactivating all Resources of the Provider with id: {}", providerId);
+            logger.info("Deactivating all Resources of the Provider with id: '{}'", providerId);
         }
         activateProviderServices(services, active, auth);
         activateProviderTrainingResources(trainingResources, active, auth);
@@ -607,7 +606,7 @@ public class ProviderManager extends ResourceManager<ProviderBundle> implements 
 
                 // update Service's fields
                 service.setLoggingInfo(loggingInfoList);
-                service.setLatestUpdateInfo(loggingInfoList.get(loggingInfoList.size() - 1));
+                service.setLatestUpdateInfo(loggingInfoList.getLast());
                 service.setActive(active);
 
                 try {
@@ -636,7 +635,7 @@ public class ProviderManager extends ResourceManager<ProviderBundle> implements 
 
                 // update Service's fields
                 trainingResourceBundle.setLoggingInfo(loggingInfoList);
-                trainingResourceBundle.setLatestUpdateInfo(loggingInfoList.get(loggingInfoList.size() - 1));
+                trainingResourceBundle.setLatestUpdateInfo(loggingInfoList.getLast());
                 trainingResourceBundle.setActive(active);
 
                 try {
@@ -665,7 +664,7 @@ public class ProviderManager extends ResourceManager<ProviderBundle> implements 
 
                 // update Service's fields
                 interoperabilityRecordBundle.setLoggingInfo(loggingInfoList);
-                interoperabilityRecordBundle.setLatestUpdateInfo(loggingInfoList.get(loggingInfoList.size() - 1));
+                interoperabilityRecordBundle.setLatestUpdateInfo(loggingInfoList.getLast());
                 interoperabilityRecordBundle.setActive(active);
 
                 try {
@@ -685,14 +684,7 @@ public class ProviderManager extends ResourceManager<ProviderBundle> implements 
 
     @Override
     public ProviderBundle validate(ProviderBundle provider) {
-        logger.debug("Validating Provider with id: {}", provider.getId());
-
-        try {
-            fieldValidator.validate(provider);
-        } catch (IllegalAccessException e) {
-            logger.error("", e);
-        }
-
+        logger.debug("Validating Provider with id: '{}'", provider.getId());
         if (provider.getProvider().getScientificDomains() != null && !provider.getProvider().getScientificDomains().isEmpty()) {
             validateScientificDomains(provider.getProvider().getScientificDomains());
         }
@@ -700,7 +692,7 @@ public class ProviderManager extends ResourceManager<ProviderBundle> implements 
             validateMerilScientificDomains(provider.getProvider().getMerilScientificDomains());
         }
 
-        return provider;
+        return super.validate(provider);
     }
 
     @Override
@@ -727,7 +719,8 @@ public class ProviderManager extends ResourceManager<ProviderBundle> implements 
                         updatedUsers.add(user);
                     }
                 } else {
-                    if (!user.getEmail().equals("") && !user.getEmail().equalsIgnoreCase(authenticatedUser.getEmail())) {
+                    if (!user.getEmail().isEmpty() &&
+                            !user.getEmail().equalsIgnoreCase(Objects.requireNonNull(authenticatedUser).getEmail())) {
                         updatedUsers.add(user);
                     }
                 }
@@ -735,16 +728,6 @@ public class ProviderManager extends ResourceManager<ProviderBundle> implements 
             providerBundle.getProvider().setUsers(updatedUsers);
             update(providerBundle, authentication);
         }
-    }
-
-    // For front-end use
-    public boolean validateUrl(URL urlForValidation) {
-        try {
-            fieldValidator.validateUrl(null, urlForValidation);
-        } catch (Throwable e) {
-            return false;
-        }
-        return true;
     }
 
     @Override
@@ -857,8 +840,8 @@ public class ProviderManager extends ResourceManager<ProviderBundle> implements 
             }
         }
         Collections.shuffle(providersToBeAudited);
-        for (int i = providersToBeAudited.size() - 1; i > ff.getQuantity() - 1; i--) {
-            providersToBeAudited.remove(i);
+        if (providersToBeAudited.size() > ff.getQuantity()) {
+            providersToBeAudited.subList(ff.getQuantity(), providersToBeAudited.size()).clear();
         }
         return new Browsing<>(providersToBeAudited.size(), 0, providersToBeAudited.size(), providersToBeAudited, providerBrowsing.getFacets());
     }
@@ -878,7 +861,7 @@ public class ProviderManager extends ResourceManager<ProviderBundle> implements 
         // create LoggingInfo
         List<LoggingInfo> loggingInfoList = commonMethods.returnLoggingInfoListAndCreateRegistrationInfoIfEmpty(provider, auth);
         provider.setLoggingInfo(loggingInfoList);
-        if (catalogueId == null || catalogueId.equals("") || catalogueId.equals(this.catalogueId)) {
+        if (catalogueId == null || catalogueId.isEmpty() || catalogueId.equals(this.catalogueId)) {
             // set catalogueId = eosc
             provider.getProvider().setCatalogueId(this.catalogueId);
             provider.setActive(false);
